build: update version